<resources>
    <string name="app_name">Tasko</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create an Account</string>
    <string name="create">Create</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="usernameEditText">UserName</string>
    <string name="loginButton">LOGIN</string>
    <string name="createaccountButton">Create Account</string>

    <string name="add_task">Add a task</string>
    <string name="task_title">Give your task a title</string>
    <string name="description">Description</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_location">Add Location</string>
    <string name="post_task">Post your task!</string>

    <string name="title_activity_navigator">NavigatorActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="view_profile">View Profile</string>
    <string name="my_assignments">My assignments</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_tasks">My tasks</string>
    <string name="username_header">Username</string>
    <string name="contact">Contact information</string>

    <string name="title_activity_view_my_tasks">ViewMyTasks</string>
    <string name="post_a_task">Post a Task</string>
    <string name="search_for_a_task">Search for a task</string>
    <string name="title_activity_view_task_details">ViewTaskDetails</string>
    <string name="title_activity_view_searched_task_details">ViewSearchedTaskDetailsActivity
    </string>
    <string name="image_to_be_uploaded">Image to be uploaded</string>
    <string name="select_an_image">Select An Image</string>
    <string name="confirm_upload">Confirm Upload</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="search_task_title">Task Title</string>
    <string name="search_lowest_bid">Lowest Bid: $%1$.2f</string>
    <string name="task_search_description">Description:</string>
    <string name="task_details_requested_by">Requested by:</string>
    <string name="phone_number_pattern">\\d{3}-(\\d{3})-(\\d{4})</string>
    <string name="searchTaskStatus">Status:</string>
    <string-array name="filter_options_array">
        <item>All</item>
        <item>Requested</item>
        <item>Bidded</item>
        <item>Assigned</item>
        <item>Done</item>
    </string-array>
    <string name="your_bid">Your Bid</string>
    <string name="bidded_task_title">Task Title</string>
    <string name="ViewSearchedTaskDetailsNoBids">No bids</string>
    <string name="lowest_bid">Lowest Bid:</string>
    <string name="my_bid">My Bid:</string>
    <string name="create_notification">Create Notification</string>
    <string name="view_photo_message">This task currently has no images.</string>
    <string name="image_message">No images currently added.</string>
    <string name="add_photo_title">Add Photos</string>
    <string name="view_photos_title">View Photos</string>
    <string name="edit_your_task">Edit Your Task</string>
    <string name="confirm">Confirm</string>
    <string name="profile">Profile</string>
    <string name="title_activity_accepted_task">AcceptedTaskActivity</string>
    <string name="edit">Edit</string>

    <string name="title_activity_nearby_tasks">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_select_location">Map</string>

</resources>

