<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2018 Chase Buhler, Imtihan Ahmed, Thomas Lafrance, Ryan Romano, Stephen Packer,
  ~ Alden Emerson Ern Tan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License
  ~ is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
  ~ express or implied. See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="ca.ualbert.cs.tasko.AddPhotoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/addPhotoTaskImage"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image_to_be_uploaded"/>

        <Button
            android:id="@+id/addPhotoUploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onUploadClick"
            android:text="@string/select_an_image"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/addPhotoConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onConfirmClick"
            android:text="@string/confirm_upload"
            android:textColor="@android:color/black" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
